...
            if context.viewState.composerMode == .default, context.viewState.sendButtonDisabled {
                Button {
                    context.send(viewAction: .showHTMLComposer)
                } label: {
                    Label(UntranslatedL10n.irisHtmlCard, icon: \.textFormatting)
                }
                .accessibilityIdentifier("irisHTMLCompose")
            }
            Button {
                context.send(viewAction: .enableTextFormatting)
            } label: {
                Label(L10n.screenRoomAttachmentTextFormatting, icon: \.textFormatting)
            }
...
